# Sheet

./: Sheet.cabal  extrav15.sht  extrav17.sht  output.html  test.sht
app/: Main.hs
src/: Lib.hs  Parser.hs  Report.hs  Sheet.hs
test/: LibSpec.hs  SheetSpec.hs
