name:                Sheet
version:             0.1.0.0
synopsis:            A Simple Leger for shared paymebnts.
homepage:            https://github.com/githubuser/Sheet#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2017 Jeffrey Rosenbluth
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sheet
                     , Report
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.6 && < 1.9
                     , containers >= 0.5 && < 0.6
                     , semigroups >= 0.18 && < 0.19
                     , cereal >= 0.5 && < 0.6
                     , lucid >= 2.9 && < 2.10
                     , text >= 1.2 && < 1.4
  default-language:    Haskell2010

executable sheetit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Sheet
                     , haskeline >= 0.7 && < 0.8
                     , mtl >= 2.2 && < 2.3
                     , bytestring >= 0.10 && < 0.11
                     , cereal >= 0.5 && < 0.6
                     , directory >= 1.3 && < 1.4
                     , text >= 1.2 && < 1.4
  default-language:    Haskell2010

test-suite Sheet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Sheet
                     , hspec
                     , time >= 1.6 && < 1.9
                     , containers >= 0.5 && < 0.6
                     , semigroups >= 0.18 && < 0.19
                     , cereal >= 0.5 && < 0.6
                     , QuickCheck
  other-modules:       SheetSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeffreyrosenbluth/Sheet
